InstanceKlass::set_init_state failed with "assert(good_state || state == allocated): illegal state transition"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 15
    • Affects Version/s: 15
    • Component/s: hotspot
    • b14
    • x86_64
    • generic

      The following test failed in the JDK15 CI:

      vmTestbase/vm/jit/LongTransitions/nativeFnc15/TestDescription.java

      Here's a snippet from the log file:

      #section:main
      ----------messages:(4/223)----------
      command: main vm.jit.LongTransitions.LTTest nativeFnc15
      reason: User specified action: run main/native/othervm vm.jit.LongTransitions.LTTest nativeFnc15
      Mode: othervm [/othervm specified]
      elapsed time (seconds): 6.895
      ----------configuration:(0/0)----------
      ----------System.out:(18/1151)*----------
      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=t:/workspace/open/src/hotspot/share/oops/instanceKlass.cpp:3712
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (t:/workspace/open/src/hotspot/share/oops/instanceKlass.cpp:3712), pid=8052, tid=25508
      # assert(good_state || state == allocated) failed: illegal state transition
      #
      # JRE version: Java(TM) SE Runtime Environment (15.0+14) (fastdebug build 15-ea+14-494)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-ea+14-494, mixed mode, sharing, tiered, jvmci, jvmci compiler, compressed oops, g1 gc, windows-amd64)
      # Core dump will be written. Default location: T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_compiler\\scratch\\6\\hs_err_pid8052.mdmp
      #
      # An error report file with more information is saved as:
      # T:\\testoutput\\test-support\\jtreg_open_test_hotspot_jtreg_vmTestbase_vm_compiler\\scratch\\6\\hs_err_pid8052.log
      #
      # If you would like to submit a bug report, please visit:
      # https://bugreport.java.com/bugreport/crash.jsp
      #
      ----------System.err:(0/0)----------
      ----------rerun:(47/6148)*----------

      Here's the crashing thread's stack:

      --------------- T H R E A D ---------------

      Current thread (0x000000ccc69b0000): JavaThread "JVMCI CompilerThread0" daemon [_thread_in_vm, id=25508, stack(0x000000ccc77f0000,0x000000ccc78f0000)]


      Current CompileTask:
      JVMCI: 1210 152 4 java.lang.Object::<init> (1 bytes)

      Stack: [0x000000ccc77f0000,0x000000ccc78f0000]
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [jvm.dll+0x9ec2b1] os::platform_print_native_stack+0xf1 (os_windows_x86.cpp:369)
      V [jvm.dll+0xbed3ab] VMError::report+0xf0b (vmerror.cpp:725)
      V [jvm.dll+0xbeec5e] VMError::report_and_die+0x8ae (vmerror.cpp:1533)
      V [jvm.dll+0xbef354] VMError::report_and_die+0x64 (vmerror.cpp:1317)
      V [jvm.dll+0x4151a2] report_vm_error+0x102 (debug.cpp:264)
      V [jvm.dll+0x5c8e13] InstanceKlass::set_init_state+0x63 (instanceklass.cpp:3712)
      V [jvm.dll+0xb4337f] SystemDictionary::add_to_hierarchy+0x5f (systemdictionary.cpp:1861)
      V [jvm.dll+0xb44071] SystemDictionary::define_instance_class+0x2e1 (systemdictionary.cpp:1653)
      V [jvm.dll+0xb45fbc] SystemDictionary::find_or_define_instance_class+0x2fc (systemdictionary.cpp:1747)
      V [jvm.dll+0xb47a2b] SystemDictionary::load_instance_class+0x23b (systemdictionary.cpp:1526)
      V [jvm.dll+0xb49ba3] SystemDictionary::resolve_instance_class_or_null+0x823 (systemdictionary.cpp:846)
      V [jvm.dll+0xb4a005] SystemDictionary::resolve_or_fail+0x25 (systemdictionary.cpp:194)
      V [jvm.dll+0x4081e9] ConstantPool::klass_at_impl+0x3a9 (constantpool.cpp:497)
      V [jvm.dll+0x5d7bda] InterpreterRuntime::_new+0xca (interpreterruntime.cpp:230)
      C 0x000000cca956c216

      Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
      j java.lang.ClassLoader.getNamedPackage(Ljava/lang/String;Ljava/lang/Module;)Ljava/lang/NamedPackage;+16 java.base@15-ea
      j java.lang.ClassLoader.postDefineClass(Ljava/lang/Class;Ljava/security/ProtectionDomain;)V+9 java.base@15-ea
      j java.lang.ClassLoader.defineClass(Ljava/lang/String;Ljava/nio/ByteBuffer;Ljava/security/ProtectionDomain;)Ljava/lang/Class;+102 java.base@15-ea
      j java.security.SecureClassLoader.defineClass(Ljava/lang/String;Ljava/nio/ByteBuffer;Ljava/security/CodeSource;)Ljava/lang/Class;+8 java.base@15-ea
      j jdk.internal.loader.BuiltinClassLoader.defineClass(Ljava/lang/String;Ljdk/internal/loader/BuiltinClassLoader$LoadedModule;)Ljava/lang/Class;+127 java.base@15-ea
      j jdk.internal.loader.BuiltinClassLoader.findClassInModuleOrNull(Ljdk/internal/loader/BuiltinClassLoader$LoadedModule;Ljava/lang/String;)Ljava/lang/Class;+9 java.base@15-ea
      j jdk.internal.loader.BuiltinClassLoader.findClass(Ljava/lang/String;Ljava/lang/String;)Ljava/lang/Class;+42 java.base@15-ea
      j java.lang.ClassLoader.loadClass(Ljava/lang/Module;Ljava/lang/String;)Ljava/lang/Class;+26 java.base@15-ea
      j java.lang.Class.forName(Ljava/lang/Module;Ljava/lang/String;)Ljava/lang/Class;+81 java.base@15-ea
      j java.util.ServiceLoader.loadProvider(Ljdk/internal/module/ServicesCatalog$ServiceProvider;)Ljava/util/ServiceLoader$Provider;+38 java.base@15-ea
      j java.util.ServiceLoader$ModuleServicesLookupIterator.hasNext()Z+79 java.base@15-ea
      j java.util.ServiceLoader$2.hasNext()Z+4 java.base@15-ea
      j java.util.ServiceLoader$3.hasNext()Z+32 java.base@15-ea
      j jdk.vm.ci.services.JVMCIServiceLocator.getProviders(Ljava/lang/Class;)Ljava/util/List;+40 jdk.internal.vm.ci@15-ea
      j jdk.vm.ci.hotspot.HotSpotJVMCICompilerConfig.getJVMCICompilerFactories()Ljava/util/List;+2 jdk.internal.vm.ci@15-ea
      j jdk.vm.ci.hotspot.HotSpotJVMCICompilerConfig.getCompilerFactory()Ljdk/vm/ci/runtime/JVMCICompilerFactory;+61 jdk.internal.vm.ci@15-ea
      j jdk.vm.ci.hotspot.HotSpotJVMCIRuntime.<init>()V+277 jdk.internal.vm.ci@15-ea
      j jdk.vm.ci.hotspot.HotSpotJVMCIRuntime.runtime()Ljdk/vm/ci/hotspot/HotSpotJVMCIRuntime;+31 jdk.internal.vm.ci@15-ea
      v ~StubRoutines::call_stub
      j jdk.vm.ci.runtime.JVMCI.initializeRuntime()Ljdk/vm/ci/runtime/JVMCIRuntime;+0 jdk.internal.vm.ci@15-ea
      j jdk.vm.ci.runtime.JVMCI.getRuntime()Ljdk/vm/ci/runtime/JVMCIRuntime;+35 jdk.internal.vm.ci@15-ea
      v ~StubRoutines::call_stub

            Assignee:
            Ioi Lam
            Reporter:
            Daniel Daugherty
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: