8240613: InstanceKlass::set_init_state failed with assert(good_state || state == allocated)

Reviewed-by: dcubed